build: use java21 instead of 11 to build the project
Instead of relying on java 11 use 21 to build but still release to 11.

Signed-off-by: Jasper Berton <jasper.berton@team.blue>