@@ -19,10 +19,8 @@ RELEASE=${VERSION[1]-1}
 [[ -d rpmbuild/SOURCES ]] || mkdir -p rpmbuild/SOURCES
 git archive --format=tar HEAD | gzip -9 > rpmbuild/SOURCES/ovirt-engine-api-model-$VERSION.tar.gz
 
-# Set the location of the JDK that will be used for compilation:
-export JAVA_HOME="${JAVA_HOME:=/usr/lib/jvm/java-11}"
-
 # Generate AsciiDoc and HTML documentation
+export MAVEN_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
 mvn package -Pgenerate-adoc-html -Dadoc.linkcss=true
 cp target/doc.jar rpmbuild/SOURCES/ovirt-engine-api-model-doc-$VERSION.jar
 
